--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 	<title>Uploader -  Simplest uploader HTML5</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css" />	
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">	
-	<!--link rel="stylesheet" href="dist/css/uploadr.min.css" /--> 	
-	<link rel="stylesheet" href="css/uploadr.css" /> 	
+	<link rel="stylesheet" href="dist/css/uploadr.min.css" /> 	
 </head>
 <body>
 	<div class="container">
@@ -67,8 +66,7 @@
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>		
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/js/materialize.min.js"></script>
-<!--script src="dist/js/uploadr.min.js"></script-->			
-<script src="js/uploadr.js"></script>			
+<script src="dist/js/uploadr.min.js"></script>			
 <script>
 	$(function(){
 		$(".uploadr").uploadr();
