--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Uploader -  Simplest uploader HTML5</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css" />	
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">	
-	<link rel="stylesheet" href="dist/css/uploadr.min.css" /> 	
+	<link rel="stylesheet" href="dist/css/uploadr.css" /> 	
 </head>
 <body>
 	<div class="container">
