adicionando informações ao readme.md

--- a/readme.html
+++ b/readme.html
@@ -1,3 +1,4 @@
+<p><img src="http://www.fripixel.com.br/img/logotipo-footer.png" alt="Fripixel Logo" title="Fripixel Logo"></p>
 <h1 id="uploader">UPLOADER</h1>
 <h2 id="simplifying-the-upload-proccess">simplifying the upload proccess</h2>
 <p>This plugins will accelerate your upload process.</p>
@@ -35,5 +36,5 @@
     });
 });
 </code></pre>
-<p>Done! Enjoy it!</p>
-<p>Developed by: <a href="http://www.fripixel.com.br">http://www.fripixel.com.br</a></p>
+<p><em>Done! Enjoy it!</em></p>
+<p><strong>Developed by:</strong> <a href="http://www.fripixel.com.br">http://www.fripixel.com.br</a></p>
