--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 							</h2>
 						</div>				
 						<div class="row"></div>
-						<h5 class="grey-text text-lighten-1 center-align">simplifying the upload process.</h5>
-						<hr />
+						<h6 class="grey-text text-lighten-1 left-align">simplifying the upload process.</h6> <hr>
+						<div class="row"></div>
 					</div>
 
 					<div class="input-field col s6">
