reestrurando no formato jquery boilerplate

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 						<!-- basic structure -->
 						<div class="uploadr">
 							<a href="javascript:;" id="addfile" class="btn btn-block blue lighten-1"><i class="fa fa-picture-o"></i> images</a>	
-							<ul id="preview"></ul>
+							<ul id="preview">
+							</ul>
 						</div>
 						<!--// basic structure -->
 						<hr />
@@ -66,10 +67,10 @@
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>		
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/js/materialize.min.js"></script>
-<script src="dist/js/uploadr.min.js"></script>			
+<script src="js/uploadr.js"></script>			
 <script>
 	$(function(){
-		$(".uploadr").uploadr();
+		$(".uploadr").uploadr();		 
 	});
 </script>
 </body>
