--- a/readme.html
+++ b/readme.html
@@ -32,7 +32,9 @@
           &#39;buttonID&#39;: &#39;#addfile&#39;, //id of the uploadr
           &#39;inputName&#39;: &#39;images[]&#39;, //field name 
           &#39;accept&#39;: &quot;image/x-png, image/gif, image/jpeg&quot;, //filter extensions
-          &#39;multiple&#39;: null //multiple files
+          &#39;multiple&#39;: null, //multiple files
+          &#39;qty&#39;: 0, //amount of files 0 = unlimited          
+          &#39;once&#39;: false // upload one file            
     });
 });
 </code></pre>
