--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>		
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/js/materialize.min.js"></script>
-<script src="js/uploadr.js"></script>			
+<script src="dist/js/uploadr.min.js"></script>			
 <script>
 	$(function(){
 		$(".uploadr").uploadr();		 
